--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="img/logo.png">
     <link rel="stylesheet" href="style.css">
-    <title>Click Bomber</title>
+    <title>CPS</title>
 </head>
 <body>
     <header>
@@ -27,7 +28,9 @@
                 <option value="60">60</option>
             </select>
         </div>
-        <div id="link"><a href="index.html">Recommencer</a></div>
+        <div id="linka"><a href="index.html">Recommencer</a></div>
+        <div id="linkb"><a href="index.html">Annuler</a></div>
+
     </div>
 
 
